fix footer alignment on mobile

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,7 +4,9 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  flex-direction: column;
+  gap: 1.5rem;
+  align-items: center;
   background-color: $color-black;
   color: $color-white;
   padding: 40px 16px;
@@ -12,6 +14,9 @@
 
   @include mdMinBreakPoint {
     padding: 40px 40px;
+    flex-direction: row;
+    gap: 0;
+    align-items: flex-start;
   }
 
   &__title {
